# mlx

./: AGENTS.md  CMakeLists.txt  MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  QWEN3_OPERATION_PROFILE.md  REMAINING_MIGRATION_GUIDE.md  VULKAN_CXX_API_MIGRATION_PLAN.md  benchmark_qwen3.sh  build-editable.sh  build-venv.sh  build-vulkan.sh  out.tracy  test_tracy.py
.github/: FUNDING.yml
cmake/: FindShaderc.cmake
mlx/: CMakeLists.txt  array.cpp  fast.cpp  fast_primitives.h
mlx/backend/common/: buffer_cache.h
mlx/backend/cuda/: scaled_dot_product_attention.cpp
mlx/backend/gpu/: primitives.cpp
mlx/backend/metal/: scaled_dot_product_attention.cpp
mlx/backend/no_vulkan/: primitives.cpp
mlx/backend/rocm/: allocator.cpp  allocator.h  no_rocm.cpp  rocm.cpp  rocm.h
mlx/backend/vulkan/: CMakeLists.txt  allocator.cpp  allocator.h  arange.cpp  binary.cpp  compiled.cpp  conv.cpp  copy.cpp  device.cpp  device.h  device_info.cpp  device_info.h  eval.cpp  event.cpp  fast.cpp  fence.cpp  gather.cpp  kernels.cpp  kernels.h  matmul.cpp  matmul.h  no_vulkan.cpp  primitives.cpp  primitives_utils.cpp  primitives_utils.h  profile_qwen3_vulkan.py  quantized.cpp  quantized.h  qwen3_baseline.txt  random.cpp  reduce.cpp  rope.cpp  scan.cpp  scatter.cpp  softmax.cpp  test.comp  unary.cpp  vulkan.cpp  vulkan.h
mlx/backend/vulkan/kernels/: affine_dequantize.comp  affine_quantize.comp  all_rows.comp  any_rows.comp  argmax.comp  concat.comp  contig_copy.comp  copy.comp  copy_transpose.comp  cos.comp  cumsum_multipass1.comp  cumsum_multipass2.comp  dequant_nvfp4.comp  erf.comp  erfinv.comp  flash_attn.comp  flash_attn_base.glsl  flash_attn_cm1.comp  gather.comp  gather_axis.comp  generic_unary_head.glsl  greater_equal.comp  logsumexp.comp  max_rows.comp  maximum.comp  min_rows.comp  minimum.comp  mul_mm_affine.comp  random_bits.comp  rope_funcs.glsl  rope_params.glsl  round.comp  rsqrt.comp  scatter_axis.comp  select.comp  sqrt_c64.comp  square_c64.comp  sum_rows.glsl  types.glsl  vulkan-shaders-gen.cpp
python/tests/: mlx_tests.py  test_eval.py  test_export_import.py  test_fast.py  test_vulkan_ops.py  vulkan_skip.py
tests/: CMakeLists.txt  gpu_tests.cpp
vulkan-effort-docs/: MLX_VULKAN_PRIMITIVES_PLAN.md  MLX_VULKAN_SYNC_EXECUTION_PLAN.md
